replace then () object with an array. Using the map () method

--- a/mini-project/index.html
+++ b/mini-project/index.html
@@ -9,7 +9,9 @@
 <body>
     <h1>Users data</h1>
     <div id="addres-ip"></div>
-    <div id="list"></div>
+    <div id="list" class="list">
+        <div class='close'></div>
+    </div>
     <button id="load">Load</button>
     <script src="index.js"></script>
 </body>
